--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- TODO: INSTAL npm i react-helmet meta manager -->
     <meta property="og:title" content="Monster Search App">
     <meta property="og:type" content="article" />
     <meta property="og:description" content="Search for monsters in a fast way.">
     <meta property="og:image" content="https://codingpr-assets.s3.us-east-2.amazonaws.com/images/keyboard(wide).jpg">
     <meta property="og:url" content="https://denisse-ab.github.io/monster-rolodex/">
-    <meta name="twitter:image" content="https://codingpr-assets.s3.us-east-2.amazonaws.com/images/keyboard(wide).jpg">
+    <meta name="twitter:image" content="https://robohash.org/104.236.21.134.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
