--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://robohash.org/104.236.21.134.png">
+    <meta name="twitter:site" content="@CodingPR" />
+    <meta name="twitter:creator" content="@83deni32" />
+    <meta name="twitter:image:alt" content="React Search bar tutorial" />
     <meta property="og:title" content="Monster Search App">
+    <meta property="og:site_name" content="CodingPR" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="Search for monsters in a fast way.">
     <meta property="og:image" content="https://codingpr-assets.s3.us-east-2.amazonaws.com/images/keyboard(wide).jpg">
     <meta property="og:url" content="https://denisse-ab.github.io/monster-rolodex/">
-    <meta name="twitter:image" content="https://robohash.org/104.236.21.134.png">
-    <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
